# pathfinder

./: .dockerignore  .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  Dockerfile  Notes  README.md  SECURITY.md  _typos.toml  contributing.md  docker-compose.azure.yml  docker-compose.override.yml  docker-compose.yml  example.env  example.pathfinder-var.env  justfile  pathfinder_rpc_api.json  rpc_examples.sh  rpc_test.sh  rust-toolchain.toml  rustfmt.toml  start-node.sh
crates/block-commitments/: Cargo.toml
crates/block-commitments/src/: lib.rs
crates/block-hashes/: Cargo.toml
crates/block-hashes/src/: lib.rs  sepolia.rs
crates/casm-hashes/: Cargo.toml
crates/casm-hashes/src/: lib.rs
crates/class-hash/: Cargo.toml  README.md
crates/class-hash/src/: lib.rs
crates/common/: Cargo.toml  build.rs
crates/common/benches/: sierra_to_casm.rs
crates/common/src/: body.rs  cairo.rs  casm_class.rs  class_definition.rs  consensus_info.rs  consts.rs  error.rs  event.rs  hash.rs  header.rs  integration_testing.rs  l1.rs  l2.rs  lib.rs  macros.rs  message.rs  pending.rs  prelude.rs  receipt.rs  reverse_state_update.rs  signature.rs  state_update.rs  storage_index.rs  test_utils.rs  transaction.rs  trie.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: builder.rs  cli.rs  file.rs
crates/consensus/: Cargo.toml  README.md  spec.md
crates/consensus-fetcher/: Cargo.toml
crates/consensus-fetcher/src/: lib.rs
crates/consensus/src/: config.rs  engine.rs  error.rs  internal.rs  lib.rs  wal.rs
crates/consensus/tests/: common.rs  consensus_multi.rs  consensus_sim.rs  custom_proposer.rs  timeouts.rs  voteset.rs  wal.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  macros.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/benches/: bench.rs
crates/crypto/examples/: consts_curve.rs  consts_pedersen.rs  consts_poseidon.rs
crates/crypto/src/: lib.rs
crates/devnet/: Cargo.toml
crates/devnet/src/: account.rs  class.rs  contract.rs  fixtures.rs  lib.rs  utils.rs
crates/ethereum/: Cargo.toml
crates/ethereum/abi/: starknet_core_contract.json
crates/ethereum/fixtures/: eth_chainId.json  eth_getBlockByNumber.json
crates/ethereum/src/: contract.rs  lib.rs  log.rs  provider.rs  starknet.rs  state_update.rs  transport.rs  utils.rs
crates/executor/: Cargo.toml
crates/executor/resources/: versioned_constants_0_13_0.json  versioned_constants_0_13_1.json  versioned_constants_0_13_1_1.json  versioned_constants_0_13_2.json  versioned_constants_0_13_2_1.json  versioned_constants_0_13_3.json  versioned_constants_0_13_4.json  versioned_constants_0_13_5.json  versioned_constants_13_0.json  versioned_constants_13_1.json  versioned_constants_13_1_1.json  versioned_constants_13_2.json
crates/executor/src/: block.rs  block_context.rs  call.rs  class.rs  concurrent_block.rs  error.rs  error_stack.rs  estimate.rs  execution_state.rs  fee.rs  felt.rs  lib.rs  lru_cache.rs  pending.rs  simulate.rs  state_reader.rs  thread_safe_state_reader.rs  transaction.rs  types.rs  validator.rs  worker_pool.rs
crates/feeder-gateway/: Cargo.toml
crates/feeder-gateway/src/: main.rs
crates/gas-price/: Cargo.toml
crates/gas-price/src/: l1.rs  l1_to_fri.rs  l2.rs
crates/gateway-client/: Cargo.toml
crates/gateway-client/src/: builder.rs  lib.rs  metrics.rs  serde.rs
crates/gateway-client/tests/: metrics.rs
crates/gateway-test-fixtures/: Cargo.toml
crates/gateway-test-fixtures/fixtures/: contract_definition.json.zst  dummy_account.json.zst
crates/gateway-test-fixtures/src/: lib.rs
crates/gateway-test-utils/: Cargo.toml
crates/gateway-test-utils/src/: lib.rs
crates/gateway-types/: Cargo.toml
crates/gateway-types/examples/: verify_transaction_hashes.rs
crates/gateway-types/src/: class_definition.rs  class_hash.rs  error.rs  lib.rs  pending.rs  reply.rs  request.rs  trace.rs  transaction_hash.rs  websocket.rs
crates/load-test/: Cargo.toml  readme.md
crates/load-test/src/: main.rs  requests.rs  tasks.rs  types.rs
crates/merkle-tree/: Cargo.toml
crates/merkle-tree/examples/: global_tree_diff.rs
crates/merkle-tree/src/: class.rs  contract.rs  contract_state.rs  hash.rs  lib.rs  merkle_node.rs  merkle_tree.rs  receipt.rs  starknet_state.rs  state_tree.rs  storage.rs  transaction.rs  tree.rs
crates/p2p/: Cargo.toml  Dockerfile  README.md
crates/p2p-rrs/: Cargo.toml
crates/p2p-rrs/src/: handler.rs  json.rs  lib.rs
crates/p2p-v2/: Cargo.toml
crates/p2p-v2/examples/: basic.rs
crates/p2p-v2/src/: builder.rs  config.rs  consensus.rs  core.rs  lib.rs  main_loop.rs  secret.rs  sync.rs  test_utils.rs  transport.rs
crates/p2p/examples/: generate_key.rs  peer.rs  rr_stress_test_sync_client.rs  stress_test_sync_client.rs
crates/p2p/src/: behaviour.rs  builder.rs  client.rs  consensus.rs  core.rs  executor.rs  lib.rs  main_loop.rs  peer_data.rs  peers.rs  preconfirmed.rs  recent_peers.rs  secret.rs  short_id.rs  sync.rs  test_utils.rs  tests.rs  transport.rs  v2.rs
crates/p2p_bootstrap/: Cargo.toml
crates/p2p_bootstrap/src/: behaviour.rs  main.rs
crates/p2p_proto/: Cargo.toml  Makefile  README.md  build.rs
crates/p2p_proto/proto/: block.proto  capabilities.proto  class.proto  common.proto  consensus.proto  discovery.proto  event.proto  header.proto  mempool.proto  propagation.proto  receipt.proto  snapshot.proto  state.proto  sync.proto  transaction.proto
crates/p2p_proto/scripts/: generate_bindings.py  sync_protos.py
crates/p2p_proto/src/: block.rs  class.rs  common.rs  consensus.rs  consts.rs  event.rs  header.rs  lib.rs  mempool.rs  sync.rs  (+6 more)
crates/p2p_proto_v1/: Cargo.toml  build.rs
py/: .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
py/src/: call.py  compute_class_hash.py  compute_contract_hash.py  generate_test_global_tree.py  generate_test_storage_tree.py  test_call.py  test_generate_test_global_tree.py  test_generate_test_storage_tree.py
py/tools/: compute_block_hash.py  compute_class_hash.py
(+1521 files in other folders)
