[workspace]
members = [
    "crates/block-hashes",
    "crates/casm-hashes",
    "crates/class-hash",
    "crates/common",
    "crates/compiler",
    "crates/consensus",
    "crates/consensus-fetcher",
    "crates/crypto",
    "crates/ethereum",
    "crates/executor",
    "crates/feeder-gateway",
    "crates/gateway-client",
    "crates/gateway-test-fixtures",
    "crates/gateway-test-utils",
    "crates/gateway-types",
    "crates/merkle-tree",
    "crates/p2p",
    "crates/p2p_proto",
    "crates/p2p_proto_derive",
    "crates/p2p_stream",
    "crates/pathfinder",
    "crates/retry",
    "crates/rpc",
    "crates/serde",
    "crates/storage",
    "crates/tagged",
    "crates/tagged-debug-derive",
    "crates/util",
    "crates/version",
]
exclude = ["crates/load-test", "utils/pathfinder-probe"]
resolver = "2"

[workspace.package]
version = "0.21.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
authors = ["Equilibrium Labs <info@equilibrium.co>"]

[workspace.dependencies]
anyhow = "1.0.99"
ark-ff = "0.5.0"
assert_matches = "1.5.0"
async-trait = "0.1.73"
axum = "0.8.4"
base64 = "0.22.1"
bincode = "2.0.1"
bitvec = "1.0.1"
blockifier = { version = "0.16.0-rc.1", features = ["node_api", "reexecution"] }
bloomfilter = "1.0.16"
bytes = "1.4.0"
cached = "0.44.0"
# This one needs to match the version used by blockifier
cairo-lang-starknet-classes = "=2.12.3"
# This one needs to match the version used by blockifier
cairo-native = "0.6.0"
# This one needs to match the version used by blockifier
cairo-vm = "=2.5.0"
casm-compiler-v1_0_0-alpha6 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v1.0.0-alpha.6" }
casm-compiler-v1_0_0-rc0 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v1.0.0-rc0" }
casm-compiler-v1_1_1 = { package = "cairo-lang-starknet", version = "=1.1.1" }
casm-compiler-v2 = { package = "cairo-lang-starknet", version = "=2.12.3" }
clap = "4.5.45"
console-subscriber = "0.4.1"
const-decoder = "0.4.0"
const_format = "0.2.31"
criterion = "0.5.1"
dashmap = "6.1"
fake = "2.8.0"
ff = "0.13"
flate2 = "1.0.27"
futures = { version = "0.3", default-features = false }
futures-bounded = "0.3.0"
governor = "0.10.1"
hex = "0.4.3"
http = "1.0.0"
http-body = "1.0.0"
httpmock = "0.7.0-rc.1"
hyper = "1.0.0"
ipnet = "2.9.0"
jemallocator = "0.5.4"
libp2p = { version = "0.55.0", default-features = false }
libp2p-identity = "0.2.2"
libp2p-plaintext = "0.43.0"
libp2p-swarm-test = "0.5.0"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
mime = "0.3"
mockall = "0.11.4"
num-bigint = "0.4.4"
num-traits = "0.2.19"
paste = "1.0.14"
pretty_assertions_sorted = "1.2.3"
primitive-types = "0.12.1"
proc-macro2 = "1.0.97"
proptest = "1.2.0"
prost = "0.13.0"
prost-build = "0.13.0"
prost-types = "0.13.0"
quote = "1.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.11.0"
reqwest = { version = "0.12.23", default-features = false, features = [
    "http2",
    "rustls-tls-native-roots",
    "charset",
] }
rstest = "0.18.2"
rusqlite = "0.37.0"
semver = "1.0.18"
serde = "1.0.192"
serde_json = "1.0.142"
serde_with = "3.7.0"
sha2 = "0.10.7"
sha3 = "0.10"
smallvec = "1.15.1"
# This one needs to match the version used by blockifier
starknet-types-core = "=0.2.3"
# This one needs to match the version used by blockifier
starknet_api = "0.16.0-rc.1"
syn = "1.0"
tempfile = "3.8"
test-log = { version = "0.2.12", features = ["trace"] }
thiserror = "2.0.14"
time = "0.3.36"
tokio = "1.47"
tokio-retry = "0.3.0"
tokio-stream = "0.1.14"
tokio-tungstenite = "0.27"
tokio-util = { version = "0.7.16", features = ["rt"] }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.2", default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
unsigned-varint = "0.8.0"
url = "2.4.1"
vergen = { version = "8", default-features = false }
void = "1.0.2"
warp = "0.3.7"
zeroize = "1.6.0"
zstd = "0.13.2"

[profile.release]
overflow-checks = true

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true

[profile.dev.package.flate2]
opt-level = 3

[profile.ci-dev]
inherits = "dev"
incremental = false
debug = "line-tables-only"
