[package]
name = "pathfinder-class-hash"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
pathfinder-common = { version = "0.15.4", path = "../common" }
pathfinder-crypto = { version = "0.15.4", path = "../crypto" }
pathfinder-serde = { version = "0.15.4", path = "../serde" }
primitive-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
serde_with = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fake = { workspace = true, features = ["serde_json"] }
rand = { workspace = true }
rstest = { workspace = true }
starknet-gateway-test-fixtures = { path = "../gateway-test-fixtures" }
tokio = { workspace = true, features = ["macros", "test-util"] }
