[package]
name = "pathfinder-common"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full-serde = []

[dependencies]
anyhow = { workspace = true }
bitvec = { workspace = true }
fake = { workspace = true }
metrics = { workspace = true }
num-bigint = { workspace = true }
paste = "1.0.14"
pathfinder-crypto = { path = "../crypto" }
primitive-types = { workspace = true, features = ["serde"] }
rand = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
serde_with = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
    "git",
    "gitcl",
] }
