[package]
name = "pathfinder-common"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[features]
full-serde = []

[dependencies]
anyhow = { workspace = true }
bitvec = { workspace = true }
fake = { workspace = true, features = ["derive"] }
metrics = { workspace = true }
num-bigint = { workspace = true }
num-traits = "0.2"
paste = { workspace = true }
pathfinder-crypto = { version = "0.15.4", path = "../crypto" }
primitive-types = { workspace = true, features = ["serde"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
serde_with = { workspace = true }
sha3 = { workspace = true }
tagged = { path = "../tagged" }
tagged-debug-derive = { path = "../tagged-debug-derive" }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[build-dependencies]
vergen = { workspace = true, features = ["git", "gitcl"] }
