[package]
name = "pathfinder-compiler"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
casm-compiler-v1_0_0-alpha6 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v1.0.0-alpha.6" }
casm-compiler-v1_0_0-rc0 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v1.0.0-rc0" }
casm-compiler-v1_1_1 = { package = "cairo-lang-starknet", version = "=1.1.1" }
casm-compiler-v2 = { package = "cairo-lang-starknet", version = "=2.7.0" }
num-bigint = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
starknet-gateway-test-fixtures = { path = "../gateway-test-fixtures" }
