[package]
name = "pathfinder-compiler"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
casm-compiler-v1_0_0-alpha6 = { workspace = true }
casm-compiler-v1_0_0-rc0 = { workspace = true }
casm-compiler-v1_1_1 = { workspace = true }
casm-compiler-v2 = { workspace = true }
num-bigint = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
starknet_api = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
starknet-gateway-test-fixtures = { path = "../gateway-test-fixtures" }
