[package]
name = "pathfinder-consensus"
description = "Pathfinder Consensus"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
ed25519-consensus = "2.1.0"
malachite-consensus = { package = "informalsystems-malachitebft-core-consensus", version = "0.5" }
malachite-metrics = { package = "informalsystems-malachitebft-metrics", version = "0.5" }
malachite-signing-ed25519 = { package = "informalsystems-malachitebft-signing-ed25519", version = "0.5", features = ["serde"] }
malachite-types = { package = "informalsystems-malachitebft-core-types", version = "0.5" }
pathfinder-common = { version = "0.21.1", path = "../common" }
pathfinder-crypto = { version = "0.21.1", path = "../crypto" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "test-util", "time"] }
