[package]
name = "pathfinder-crypto"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pathfinder_crypto"
path = "src/lib.rs"

[build-dependencies]

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
bitvec = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
rand_core = "0.6.4"
serde = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
criterion = { workspace = true }
num-bigint = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bench"
harness = false
