[package]
name = "pathfinder-crypto"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pathfinder_crypto"
path = "src/lib.rs"

[build-dependencies]

[dependencies]
bitvec = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ark-ff = { version = "0.4.2", features = ["std", "asm"] }
assert_matches = { workspace = true }
criterion = { workspace = true }
ff = { version = "0.13", features = ["derive"] }
num-bigint = { workspace = true }
pretty_assertions_sorted = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bench"
harness = false
