[package]
name = "pathfinder-crypto"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Cryptographic primitives used by Pathfinder"
repository = "https://github.com/eqlabs/pathfinder"
keywords = ["starknet", "cryptography", "pedersen", "poseidon", "ecdsa"]
categories = [
    "cryptography",
    "cryptography::cryptocurrencies",
    "algorithms",
    "mathematics",
    "no-std",
]

[lib]
name = "pathfinder_crypto"
path = "src/lib.rs"

[dependencies]
bincode = { workspace = true }
bitvec = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[build-dependencies]

[dev-dependencies]
ark-ff = { workspace = true, features = ["std", "asm"] }
assert_matches = { workspace = true }
criterion = { workspace = true }
ff = { workspace = true, features = ["derive"] }
num-bigint = { workspace = true }
pretty_assertions_sorted = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bench"
harness = false
