[package]
name = "pathfinder-devnet"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
num-bigint = { workspace = true }
pathfinder = { path = "../pathfinder" }
pathfinder-class-hash = { path = "../class-hash" }
pathfinder-common = { path = "../common" }
pathfinder-compiler = { path = "../compiler" }
pathfinder-crypto = { path = "../crypto" }
pathfinder-merkle-tree = { path = "../merkle-tree" }
pathfinder-storage = { path = "../storage" }
serde = { workspace = true }
serde_json = { workspace = true }
starknet_api = { workspace = true }
starknet-types-core = { workspace = true }
