[package]
name = "pathfinder-ethereum"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
const-decoder = "0.3.0"
hex = { workspace = true }
keccak-hash = "0.10.0"
pathfinder-common = { path = "../common" }
primitive-types = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
stark_hash = { path = "../stark_hash" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
httpmock = "0.6.8"
tokio = { workspace = true, features = ["macros"] }
