[package]
name = "pathfinder-ethereum"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
alloy = { version = "1.2", default-features = false, features = [
    "contract",
    "rpc-types",
    "provider-ws",
    "reqwest-rustls-tls",
] }
anyhow = { workspace = true }
async-trait = { workspace = true }
const-decoder = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
primitive-types = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
util = { path = "../util" }
