[package]
name = "pathfinder-executor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
blockifier = { workspace = true }
cached = { workspace = true }
cairo-vm = { workspace = true }
lazy_static = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
pathfinder-storage = { path = "../storage" }
primitive-types = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
starknet-gateway-types = { path = "../gateway-types" }
starknet_api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
