[package]
name = "pathfinder-executor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
blockifier = { workspace = true }
cached = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
cairo-vm = { workspace = true }
metrics = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
pathfinder-storage = { path = "../storage" }
util = { path = "../util" }
primitive-types = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
starknet-gateway-types = { path = "../gateway-types" }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
