[package]
name = "pathfinder-executor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[features]
cairo-native = ["blockifier/cairo_native", "dep:cairo-native"]

[dependencies]
anyhow = { workspace = true }
blockifier = { workspace = true }
cached = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
cairo-native = { workspace = true, optional = true }
cairo-vm = { workspace = true }
metrics = { workspace = true }
num-bigint = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
pathfinder-storage = { path = "../storage" }
primitive-types = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
util = { path = "../util" }
