[package]
name = "feeder-gateway"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[features]
small_aggregate_filters = ["pathfinder-storage/small_aggregate_filters"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
const-decoder = { workspace = true }
futures = { workspace = true }
pathfinder = { path = "../pathfinder" }
pathfinder-common = { path = "../common", features = ["full-serde"] }
pathfinder-storage = { path = "../storage" }
primitive-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
starknet-gateway-types = { path = "../gateway-types" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "ansi",
] }
warp = { workspace = true }
